--- a/styles/loader.module.scss
+++ b/styles/loader.module.scss
@@ -1,11 +1,20 @@
+$size: 5px;
+
+.container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .loader {
   background-color: transparent;
   overflow: hidden;
   width: 100%;
   height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
+  // position: absolute;
+  // top: 0;
+  // left: 0;
   display: flex;
   align-items: center;
   align-content: center;
