--- a/styles/explore.module.scss
+++ b/styles/explore.module.scss
@@ -1,22 +1,26 @@
 @use './variables' as *;
 
+@mixin container {
+  max-width: 1280px;
+  margin: 0 auto;
+
+  .container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1280px;
+  }
+
+  .error {
+    height: 100%;
+    @include errorStyle;
+  }
+}
+
 .explore {
-  max-width: 1280px;
-  margin: 0 auto;
-}
-
-.container {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1280px;
-}
-
-.error {
-  height: 100%;
-  @include errorStyle;
+  @include container;
 }
 
 .pagination {
