--- a/styles/cards.module.scss
+++ b/styles/cards.module.scss
@@ -76,6 +76,16 @@
   backdrop-filter: blur(16px);
   border-radius: 10px;
 
+  &:hover {
+    box-shadow: 0px 4px 15px rgba(17, 17, 17, 0.8);
+
+    .gameImage {
+      img {
+        transform: scale(1.15);
+      }
+    }
+  }
+
   @include mobile {
     width: 200px;
     max-height: 300px;
@@ -95,8 +105,11 @@
     height: 168.75px;
     position: relative;
     margin: -2px;
+    overflow: hidden;
+    border-radius: 10px;
 
     @include mobile {
+      border-radius: 0.5rem;
       min-width: 200px;
       height: 112.5px;
     }
@@ -105,6 +118,7 @@
       border-radius: 10px;
       object-fit: cover;
       object-position: center;
+      transition: transform 0.5s;
 
       @include mobile {
         border-radius: 0.5rem;
