--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -95,6 +95,10 @@
     max-width: 1180px;
     margin: auto;
 
+    @include mobile {
+      padding: 10px;
+    }
+
     .details {
       display: flex;
 
