--- a/styles/genre.module.scss
+++ b/styles/genre.module.scss
@@ -36,10 +36,11 @@
       position: absolute;
       font-size: 56px;
       font-weight: bolder;
+      font-family: 'Ubuntu', sans-serif;
       text-transform: uppercase;
       -webkit-text-fill-color: transparent;
       -webkit-font-smoothing: antialiased;
-      -webkit-text-stroke: 1px;
+      -webkit-text-stroke: 2px;
       z-index: 1;
       opacity: 0.5;
       line-height: 100%;
